--- a/CountDownTimer/Base.lproj/Main.storyboard
+++ b/CountDownTimer/Base.lproj/Main.storyboard
@@ -15,12 +15,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d3L-h4-fPI">
-                                <rect key="frame" x="186" y="80" width="44" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xc5-QN-EcS" userLabel="ViewCircle" customClass="CircleView" customModule="CountDownTimer" customModuleProvider="target">
                                 <rect key="frame" x="57" y="298" width="300" height="300"/>
                                 <subviews>
@@ -28,37 +22,48 @@
                                         <rect key="frame" x="100" y="178" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     </pickerView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nOo-B1-zee" userLabel="count">
-                                        <rect key="frame" x="123" y="113" width="69" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nOo-B1-zee" userLabel="count">
+                                        <rect key="frame" x="89" y="111" width="52" height="43"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="Vku-Gl-Yuu"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="69" id="sjk-YK-T6p"/>
+                                            <constraint firstAttribute="width" constant="52" id="Hq6-N3-sJq"/>
+                                            <constraint firstAttribute="height" constant="43" id="v5u-oa-FdQ"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sec" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lrW-iC-Ch2">
-                                        <rect key="frame" x="122" y="89" width="27" height="25"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XJP-l2-j2U" userLabel="count">
+                                        <rect key="frame" x="158" y="111" width="52" height="43"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="25" id="9Vr-bm-47i"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="27" id="g5h-q2-VfH"/>
+                                            <constraint firstAttribute="width" constant="52" id="2xF-3c-3NI"/>
+                                            <constraint firstAttribute="height" constant="43" id="SXL-7Q-btW"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiR-G9-yDB" userLabel="count">
+                                        <rect key="frame" x="139" y="106" width="22" height="47"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="47" id="Lsv-ho-6eF"/>
+                                            <constraint firstAttribute="width" constant="22" id="jVq-TB-KGY"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lrW-iC-Ch2" secondAttribute="trailing" constant="20" symbolic="YES" id="C0A-3g-itr"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nOo-B1-zee" secondAttribute="trailing" constant="20" symbolic="YES" id="Gjq-wV-chE"/>
+                                    <constraint firstItem="XJP-l2-j2U" firstAttribute="leading" secondItem="nOo-B1-zee" secondAttribute="trailing" constant="17" id="6yz-VW-113"/>
+                                    <constraint firstItem="DiR-G9-yDB" firstAttribute="top" secondItem="xc5-QN-EcS" secondAttribute="top" constant="106" id="Ck4-8A-Sex"/>
                                     <constraint firstAttribute="width" constant="300" id="TDc-uC-UCg"/>
                                     <constraint firstAttribute="height" constant="300" id="VTU-SD-EMg"/>
-                                    <constraint firstItem="nOo-B1-zee" firstAttribute="leading" secondItem="xc5-QN-EcS" secondAttribute="leading" constant="123" id="ZHp-EX-qja"/>
-                                    <constraint firstItem="lrW-iC-Ch2" firstAttribute="top" secondItem="xc5-QN-EcS" secondAttribute="top" constant="89" id="gAd-fH-OuF"/>
-                                    <constraint firstItem="lrW-iC-Ch2" firstAttribute="leading" secondItem="xc5-QN-EcS" secondAttribute="leading" constant="122" id="hWt-mh-kir"/>
-                                    <constraint firstItem="nOo-B1-zee" firstAttribute="top" secondItem="xc5-QN-EcS" secondAttribute="top" constant="113" id="pdY-uk-JlE"/>
+                                    <constraint firstItem="XJP-l2-j2U" firstAttribute="leading" secondItem="nOo-B1-zee" secondAttribute="trailing" constant="17" id="VdN-VD-k1Y"/>
+                                    <constraint firstItem="XJP-l2-j2U" firstAttribute="top" secondItem="xc5-QN-EcS" secondAttribute="top" constant="111" id="bJO-NA-rWb"/>
+                                    <constraint firstItem="DiR-G9-yDB" firstAttribute="centerX" secondItem="xc5-QN-EcS" secondAttribute="centerX" id="igK-IS-S0y"/>
+                                    <constraint firstItem="nOo-B1-zee" firstAttribute="top" secondItem="xc5-QN-EcS" secondAttribute="top" constant="111" id="iqG-OP-mDx"/>
+                                    <constraint firstItem="nOo-B1-zee" firstAttribute="leading" secondItem="xc5-QN-EcS" secondAttribute="leading" constant="89" id="uMv-4l-cHy"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9z-Ah-hxr" userLabel="ViewButtons">
@@ -139,23 +144,33 @@
                                     <constraint firstItem="xeF-ir-ZDV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="PaZ-gy-R61" secondAttribute="trailing" constant="8" symbolic="YES" id="ylZ-pS-HpC"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count Down Timer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d3L-h4-fPI">
+                                <rect key="frame" x="63.5" y="144" width="287" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="HqA-8u-rMp"/>
+                                    <constraint firstAttribute="width" constant="287" id="VXY-PY-tkF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="d3L-h4-fPI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="73L-C5-sBw"/>
                             <constraint firstItem="b9z-Ah-hxr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8RB-HH-KNz"/>
                             <constraint firstItem="xc5-QN-EcS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="AOQ-wP-3Zs"/>
-                            <constraint firstItem="d3L-h4-fPI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="X5y-cx-U7M"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d3L-h4-fPI" secondAttribute="trailing" constant="184" id="ZZV-mq-ial"/>
+                            <constraint firstItem="d3L-h4-fPI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="Ys6-ua-cPy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b9z-Ah-hxr" secondAttribute="bottom" constant="50" id="bpg-aN-QCk"/>
                             <constraint firstItem="xc5-QN-EcS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h0q-jT-rev"/>
+                            <constraint firstItem="d3L-h4-fPI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yVc-AA-2fR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="circle" destination="xc5-QN-EcS" id="Qbb-FB-lZh"/>
-                        <outlet property="counter" destination="nOo-B1-zee" id="tgn-hh-zeY"/>
+                        <outlet property="minutes" destination="nOo-B1-zee" id="zq1-k1-GoY"/>
                         <outlet property="pickerView" destination="eCK-gl-CBy" id="qaA-De-XH5"/>
+                        <outlet property="sec" destination="XJP-l2-j2U" id="CoD-22-6vx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
